# mattermost-schedule

./: backend-specification.md  pyproject.toml  user-help.md  ux-specification.md
mattermost_schedule/: constants.py  schedule.py
